Change Footer of Application

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -28,7 +28,7 @@
 
 <footer class="footer d-flex flex-wrap justify-content-between align-items-center py-2 my-4 border-top">
   <div class="col-md-4 d-flex align-items-center">
-    <span class="text-muted">&copy; 2022 Company, MindTroopers</span>
+    <span class="text-muted">&copy; 2022 Company, MindTroopers INC</span>
   </div>
   <ul class="list-unstyled d-flex">
     <li class="ms-3"><a class="link-dark" href="https://www.instagram.com/mindtroopersinc/" target="_blank"><svg
