Change Logo in Home Page and Footer

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,7 +21,8 @@
     </div> -->
 
     <div class="px-4 py-5 my-5 text-center">
-      <img class="d-block mx-auto mb-4" src="/assets/images/troopers.jpeg" alt="" width="72" height="57">
+      <img class="d-block mx-auto mb-4" src="/assets/images/troopers.jpeg" alt="" width="200" height="100"
+        style="border: 10px;">
       <h1 class="display-5 fw-bold">MIND TROOPERS INC.®</h1>
       <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">Introducing Our One Stop Solution For All Your IT Job Training/Consultancy And Project
