--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,7 @@
 <main>
   <header class="p-3 bg-dark text-white">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <div class="container">
       <div class="navbar navbar-expand-md ">
         <img class="card-img-top" style="width: 8%; height: 1cm;" src="/assets/images/troopers.jpeg">
