--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,5 @@
 <head>
-  <link href="https://unpkg.com/bootstrap@4.1.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <link href="https://unpkg.com/bootstrap@4.1.0/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 </head>
 
 <body>
@@ -23,7 +22,7 @@
     <div class="px-4 py-5 my-5 text-center">
       <img class="d-block mx-auto mb-4" src="/assets/images/troopers.jpeg" alt="" width="200" height="100"
         style="border: 10px;">
-      <h1 class="display-5 fw-bold">MIND TROOPERS INC.®</h1>
+      <h5 class="display-6 fw-bold">MIND TROOPERS INC.®</h5>
       <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">Introducing Our One Stop Solution For All Your IT Job Training/Consultancy And Project
           Needs.</p>
