--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,6 +20,9 @@
     </div> -->
 
     <div class="px-4 py-5 my-5 text-center">
+      <p class="m1-txt1 p-b-36">
+        Our Website is <span class="m1-txt2">Coming Soon</span>, Follow Us on Twitter And Instagram For Update Now!
+      </p>
       <img class="d-block mx-auto mb-4" src="/assets/images/troopers.jpeg" alt="" width="200" height="100"
         style="border: 10px;">
       <h5 class="display-6 fw-bold">MIND TROOPERS INC.®</h5>
@@ -30,6 +33,7 @@
           <!-- <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
           <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button> -->
         </div>
+        <br><br><br>
       </div>
     </div>
 
